fix dialog can't scroll if the content too large (#993)
* fix(dialog): fix dialog can't scroll if the content too large

fix dialog can't scroll if the content too large

fix #991

* fix(dialog): make the mask can scroll

make the mask can scroll

fix #991

--- a/packages/theme-chalk/src/overlay.scss
+++ b/packages/theme-chalk/src/overlay.scss
@@ -13,4 +13,5 @@
   z-index: 2000;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  overflow: auto;
 }
